--- a/docs/style-guide/src/sass/partials/_spacing.sass
+++ b/docs/style-guide/src/sass/partials/_spacing.sass
@@ -31,7 +31,7 @@
 .spacing-token__section:not(:empty),
 .spacing-token__group:not(:empty)
 	position: sticky
-	top: var(--space-48)
+	top: 0
 	background-color: var(--ui-bg-default)
 	z-index: 10
 	background-image: radial-gradient(circle, var(--ui-dot-pattern) 1px, transparent 1px)
