--- a/docs/style-guide/src/sass/partials/_typography.sass
+++ b/docs/style-guide/src/sass/partials/_typography.sass
@@ -107,7 +107,7 @@
 .type-size__section:not(:empty),
 .type-size__group:not(:empty)
 	position: sticky
-	top: var(--space-48)
+	top: 0
 	background-color: var(--ui-bg-default)
 	z-index: 10
 	background-image: radial-gradient(circle, var(--ui-dot-pattern) 1px, transparent 1px)
